Adjusted view height on front page to prevent project button jumping, and added Image component for profile on front page.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,5 +3,5 @@
 @plugin "@tailwindcss/typography";
 
 @theme {
-    --screen-height-with-nav: calc(100dvh - 96px);
+    --screen-height-with-nav: calc(100svh - 96px);
 }
